--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
   ignore = untracked
 	path = vim/bundle/snipmate
 	url = git://github.com/msanders/snipmate.vim.git
+[submodule "vim/bundle/nerdcommenter"]
+	path = vim/bundle/nerdcommenter
+	url = git://github.com/scrooloose/nerdcommenter.git
