--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "vim/bundle/nerdcommenter"]
 	path = vim/bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
+[submodule "vim/bundle/syntax/javascript.vim"]
+	path = vim/bundle/syntax/javascript.vim
+	url = git://github.com/serverhorror/javascript.vim
