--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,11 @@
 [submodule "vim/bundle/Javascript-Indent"]
 	path = vim/bundle/Javascript-Indent
 	url = git://github.com/vim-scripts/JavaScript-Indent
+[submodule "vim/bundle/L9"]
+  ignore = untracked
+	path = vim/bundle/L9
+	url = git://github.com/vim-scripts/L9.git
+[submodule "vim/bundle/fuzzyfinder"]
+  ignore = untracked
+	path = vim/bundle/fuzzyfinder
+	url = git://github.com/vim-scripts/FuzzyFinder.git
