--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,6 @@
 	ui = auto
 [push]
 	default = current
+
+[alias]
+  lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --
