--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,2 @@
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-select-window on
